x64/Debug/SemanticQA.log
  SemanticQA.cpp
H:\Code\SemanticQA\SemanticQA\Utils.hpp(29): warning #1786: function "localtime" (declared at line 112 of "C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\include\time.inl") was declared deprecated ("This function or variable may be unsafe. Consider using localtime_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details.")
    	struct tm* current_time = localtime(&log_time);
    	                          ^
  
H:\Code\SemanticQA\SemanticQA\Logging.hpp(16): warning #1786: function "localtime" (declared at line 112 of "C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\include\time.inl") was declared deprecated ("This function or variable may be unsafe. Consider using localtime_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details.")
    		struct tm* current_time = localtime(&log_time);
    		                          ^
  
H:\Code\SemanticQA\SemanticQA\Logging.hpp(32): warning #1786: function "localtime" (declared at line 112 of "C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\include\time.inl") was declared deprecated ("This function or variable may be unsafe. Consider using localtime_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details.")
    		struct tm* current_time = localtime(&log_time);
    		                          ^
  
H:\Code\SemanticQA\SemanticQA\Logging.hpp(52): warning #1786: function "localtime" (declared at line 112 of "C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\include\time.inl") was declared deprecated ("This function or variable may be unsafe. Consider using localtime_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details.")
    		struct tm* current_time = localtime(&log_time);
    		                          ^
  
H:\Code\SemanticQA\SemanticQA\Logging.hpp(79): warning #1786: function "localtime" (declared at line 112 of "C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\include\time.inl") was declared deprecated ("This function or variable may be unsafe. Consider using localtime_s instead. To disable deprecation, use _CRT_SECURE_NO_WARNINGS. See online help for details.")
    		struct tm* current_time = localtime(&log_time);
    		                          ^
  
H:\Code\SemanticQA\SemanticQA\Solver.hpp(33): warning #3180: unrecognized OpenMP #pragma
    #pragma omp critical
            ^
  
H:\Code\SemanticQA\SemanticQA\Solver.hpp(43): warning #3180: unrecognized OpenMP #pragma
    #pragma omp critical
            ^
  
H:\Code\SemanticQA\SemanticQA\Solver.hpp(56): warning #3180: unrecognized OpenMP #pragma
    #pragma omp critical
            ^
  
H:\Code\SemanticQA\SemanticQA\Task.hpp(70): warning #3180: unrecognized OpenMP #pragma
    #pragma omp parallel for
            ^
  
H:\Code\SemanticQA\SemanticQA\Task.hpp(76): warning #3180: unrecognized OpenMP #pragma
    #pragma omp critical
            ^
  
  compilation aborted for SemanticQA.cpp (code -42)
C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V120\Platforms\x64\PlatformToolsets\Intel C++ Compiler 17.0\Toolset.targets(373,5): error MSB6006: “icl.exe”已退出，代码为 -42。
